<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.recipe.AddRecipeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_name_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/recipe_name_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/servings_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/number_of_servings"
            app:layout_constraintEnd_toEndOf="@+id/recipe_name_label"
            app:layout_constraintStart_toStartOf="@+id/recipe_name_label"
            app:layout_constraintTop_toBottomOf="@id/recipe_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipe_servings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/category_spinner"
            style="spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/categories"
            app:layout_constraintEnd_toEndOf="@id/recipe_name_label"
            app:layout_constraintStart_toStartOf="@id/recipe_name_label"
            app:layout_constraintTop_toBottomOf="@id/servings_label" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@id/recipe_name_label"
            app:layout_constraintStart_toStartOf="@id/recipe_name_label"
            app:layout_constraintTop_toBottomOf="@id/category_spinner" />

        <Button
            android:id="@+id/cancel_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="@id/next_btn"
            app:layout_constraintStart_toStartOf="@id/next_btn"
            app:layout_constraintTop_toBottomOf="@id/next_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>